@@ -82,10 +82,10 @@ static unsigned char        *ReadImage     (FILE *,
 				   int);
 
 at_bitmap_type
-bmp_load_image (at_string filename,
-		at_input_opts_type * opts,
-		at_msg_func msg_func, 
-		at_address msg_data)
+input_bmp_reader (at_string filename,
+		  at_input_opts_type * opts,
+		  at_msg_func msg_func, 
+		  at_address msg_data)
 {
   FILE *fd;
   unsigned char buffer[64];
