@@ -122,10 +122,10 @@ static struct struct_pnm_types
   {  0 , 0, 0,   0, NULL}
 };
 
-at_bitmap_type pnm_load_image (at_string filename,
-			       at_input_opts_type * opts,
-			       at_msg_func msg_func, 
-			       at_address msg_data)
+at_bitmap_type input_pnm_reader (at_string filename,
+				 at_input_opts_type * opts,
+				 at_msg_func msg_func, 
+				 at_address msg_data)
 {
   char buf[BUFLEN];		/* buffer for random things like scanning */
   PNMInfo *pnminfo;
